// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a simple Tag instance 1`] = `
<div
  className="ui-tag tag tagNoHover normal"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <Label
    className=""
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    location="none"
    noedit={true}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={false}
    text="test tag"
    useedit={false}
    visible={true}
    width=""
  />
</div>
`;

exports[`Test disabling of the simple Tag instance 1`] = `
<Tag
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  onDelete={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={false}
  usedelete={true}
  visible={true}
  width=""
>
  <div
    className="ui-tag tag tagNoHover normal disabled nohover"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <Label
      className=""
      contentEditable={false}
      direction="right"
      disabled={true}
      focus={false}
      height=""
      id=""
      location="none"
      noedit={true}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={false}
      text="test tag"
      useedit={false}
      visible={true}
      width=""
    >
      <span
        className="ui-label label normal disabled nohover"
        contentEditable={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={Object {}}
        suppressContentEditableWarning={true}
      >
        test tag
      </span>
    </Label>
    <ButtonCircle
      className="tagDeleteButton middle"
      contentEditable={false}
      direction="right"
      disabled={true}
      focus={false}
      height=""
      iconName="times"
      iconStyle=""
      id=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="small"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#d9534f",
          "color": "#d9534f",
        }
      }
      testing={false}
      visible={false}
      width=""
    >
      <div
        className="ui-button-circle buttonCircle small tagDeleteButton middle invisible disabled nohover"
      >
        <div
          className="buttonCircleContainer"
        >
          <Button
            className="smallBorder buttonCircleIcon"
            contentEditable={false}
            direction="right"
            disabled={true}
            focus={false}
            height=""
            iconName="times"
            iconStyle=""
            id=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            onClick={[Function]}
            selected={false}
            sizing="small"
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#d9534f",
                "color": "#d9534f",
              }
            }
            testing={false}
            visible={false}
            width=""
          >
            <div
              className="ui-button button small smallBorder buttonCircleIcon invisible disabled nohover"
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#d9534f",
                  "color": "#d9534f",
                }
              }
            >
              <Icon
                className="icon"
                contentEditable={false}
                direction="right"
                disabled={false}
                focus={false}
                height=""
                iconName="times"
                id=""
                imageFile=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                selected={false}
                sizing="small"
                style={Object {}}
                testing={false}
                visible={true}
                width=""
              >
                <i
                  className="ui-icon icon none fa fa-fw fa-times small"
                  style={Object {}}
                />
              </Icon>
            </div>
          </Button>
        </div>
      </div>
    </ButtonCircle>
  </div>
</Tag>
`;

exports[`Test making Tag invisible 1`] = `
<Tag
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  onDelete={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={false}
  usedelete={true}
  visible={false}
  width=""
>
  <div
    className="ui-tag tag tagNoHover normal invisible disabled nohover"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <Label
      className=""
      contentEditable={false}
      direction="right"
      disabled={true}
      focus={false}
      height=""
      id=""
      location="none"
      noedit={true}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={false}
      text="test tag"
      useedit={false}
      visible={false}
      width=""
    >
      <span
        className="ui-label label normal invisible disabled nohover"
        contentEditable={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={Object {}}
        suppressContentEditableWarning={true}
      >
        test tag
      </span>
    </Label>
    <ButtonCircle
      className="tagDeleteButton middle"
      contentEditable={false}
      direction="right"
      disabled={true}
      focus={false}
      height=""
      iconName="times"
      iconStyle=""
      id=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="small"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#d9534f",
          "color": "#d9534f",
        }
      }
      testing={false}
      visible={false}
      width=""
    >
      <div
        className="ui-button-circle buttonCircle small tagDeleteButton middle invisible disabled nohover"
      >
        <div
          className="buttonCircleContainer"
        >
          <Button
            className="smallBorder buttonCircleIcon"
            contentEditable={false}
            direction="right"
            disabled={true}
            focus={false}
            height=""
            iconName="times"
            iconStyle=""
            id=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            onClick={[Function]}
            selected={false}
            sizing="small"
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#d9534f",
                "color": "#d9534f",
              }
            }
            testing={false}
            visible={false}
            width=""
          >
            <div
              className="ui-button button small smallBorder buttonCircleIcon invisible disabled nohover"
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#d9534f",
                  "color": "#d9534f",
                }
              }
            >
              <Icon
                className="icon"
                contentEditable={false}
                direction="right"
                disabled={false}
                focus={false}
                height=""
                iconName="times"
                id=""
                imageFile=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                selected={false}
                sizing="small"
                style={Object {}}
                testing={false}
                visible={true}
                width=""
              >
                <i
                  className="ui-icon icon none fa fa-fw fa-times small"
                  style={Object {}}
                />
              </Icon>
            </div>
          </Button>
        </div>
      </div>
    </ButtonCircle>
  </div>
</Tag>
`;

exports[`Test retrieval of Tag props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "onDelete": [Function],
  "onMouseOut": [Function],
  "onMouseOver": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": false,
  "usedelete": false,
  "visible": true,
  "width": "",
}
`;
